2003-07-04  Frederic Crozat  <fcrozat@mandrakesoft.com>

	* macros2/compiler-flags.m4: don't use -Wsign-promo, it is 
	C++ only and causes warnings with gcc 3.3 when used on C.

2003-06-24  Marco Pesenti Gritti  <marco@it.gnome.org>

	* macros2/autogen.sh:

	Remove --enable-compile-warnings from the default arguments
	passed to configure because it break GNOME_COMPILE_WARNINGS
	macro.

2003-05-24  Malcolm Tredinnick <malcolm@commsecure.com.au>

	* MAINTAINERS: Put myself in as maintainer.

	* configure.in: Bump the version number to 2.3.0

	* configure.in, Makefile.am, macros2/autogen.sh, doc-build/*:
	Add in the infrastructure to allow user documentatin to be built
	from some common files. This will not affect existing packages.
	The changes required to use this are given in doc-build/README.

2003-02-26  Frederic Crozat  <fcrozat@mandrakesoft.com>

	* macros2/autogen.sh: set WANT_AUTOCONF_2_5 variable to tell 
	Mandrake autoconf wrapper we want to check if autoconf 2.5x is here..

2003-02-18  Jody Goldberg <jody@gnome.org>

	* configure.in : Don't depend on a file that James just deleted

2002-12-12  Jody Goldberg <jody@gnome.org>

	* macros2/gnome-common.m4 (GNOME_DEBUG_CHECK) : now that autoconf-2.52
	  is a prereq for things the build broke on the use of
	      AC_DEFINE(GNOME_ENABLE_DEBUG) 
	  without the additional arguments.

2001-12-11  Anders Carlsson  <andersca@gnu.org>

	* configure.in: Up to 1.2.4.

2001-09-20 Glynn Foster <glynn.foster@sun.com>

	* macros2/gnome-x-checks.m4: replaced  
	GNOME_PKGCONFIG_CHECK_MODULES with  PKG_CHECK_MODULES

2001-08-02  Michael Meeks  <michael@ximian.com>

	* Version 1.2.3

2001-07-26  Darin Adler  <darin@bentspoon.com>

	* configure.in: Point to the new home of pkgconfig at
	www.freedesktop.org instead of "sourceforce.net" [sic].

2001-07-26  Darin Adler  <darin@bentspoon.com>

	* doc/usage.txt: Point to the new home of pkgconfig at
	www.freedesktop.org.

2001-07-12  Darin Adler  <darin@bentspoon.com>
